# 2024HPC_Challenge_Group6

./: CMakeLists.txt  README.md
conjugate_gradients-main/: HowToRunTheApplication.md  Makefile  README.md  mem_copy_analysis.csv  modulesBeforeCompiling.sh  omp_time_analysis.csv  profiling_script_MPI.sh  random_spd_system.sh  serial_time_analysis.csv  time_analysis.csv
conjugate_gradients-main/scripts/: time_analysis.ipynb
conjugate_gradients-main/src/: CG_solver.cuh  conjugate_gradients.cpp  conjugate_gradients.cu  cuda_kernels.hpp  random_spd_system.cpp  serial_cg.cpp  test.cu  test_axpy.cu  test_dot.cu  test_gemv.cu  utilities.cuh
conjugate_gradients-main/test_performance/: omp_cg.cpp  performance_analysis.cpp  serial_cg.cpp
example/: test.cpp
inc/: conjugate_gradients.hpp
io/: execution_time.csv
script/: prova.sh  vtune.sh
scripts/: plot_speed_up.ipynb  plot_speed_up.py
src/: conjugate_gradients.cpp
